src/test/ui/impl-trait/universal-issue-48703.stderr
error[E0632]: cannot provide explicit type parameters when `impl Trait` is used in argument position.
  --> $DIR/universal-issue-48703.rs:8:5
   |
LL |     foo::<String>('a'); //~ ERROR cannot provide explicit type parameters
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0632`.
